add global exception, durable event
